[package]
name = "strings_set_file"
version = "0.1.4"
edition = "2021"

authors = ["Oden Shirataki <oden.srtk@gmail.com>"]

description = "Store a string in a file. Use mmap, optimize fragments on delete, and reference identical strings."

repository = "https://github.com/OdenShirataki/strings_set_file"

keywords = ["string","file","memmap","database"]
license = "MIT/Apache-2.0"

[dependencies]
file_mmap={ path="../file_mmap" , version="0.2" }