[package]
name = "various_data_file"
version = "0.12.4"
edition = "2021"

authors = ["Oden Shirataki <oden.srtk@gmail.com>"]

description = "Store a dainary datas in a file. Use mmap, optimize fragments on delete, and reference identical strings."

repository = "https://github.com/OdenShirataki/various_data_file"

keywords = ["file","memmap","database","binary","string"]
categories = ["caching","algorithms"]
license = "MIT/Apache-2.0"

[dependencies]
file_mmap = { version = "0.18" , path = "../file_mmap" }